# tool_guides

./: .gitignore  .gitmodules  README.md  git_howto.txt
asl/: CMakeLists.txt  README.md  asl_test_00.cpp  asl_test_01.cpp  asl_test_02.cpp
c++/accelerated_computer_science_coursera/01_OOP/: CMakeLists.txt  README.md
c++/accelerated_computer_science_coursera/01_OOP/cpp-class/: .gitignore  CMakeLists.txt  Makefile
c++/accelerated_computer_science_coursera/01_OOP/cpp-ctor/ex1/: CMakeLists.txt  Makefile
c++/accelerated_computer_science_coursera/01_OOP/cpp-ctor/ex2/: CMakeLists.txt
c++/accelerated_computer_science_coursera/01_OOP/cpp-ctor/ex3/: CMakeLists.txt  (+2 more)
c++/accelerated_computer_science_coursera/01_OOP/cpp-dtor/: CMakeLists.txt  Makefile  main.cpp
c++/accelerated_computer_science_coursera/01_OOP/cpp-heapMemory/: .gitignore  CMakeLists.txt  Makefile  heap1.cpp  heap2.cpp  main.cpp
c++/accelerated_computer_science_coursera/01_OOP/cpp-heapPuzzles/: .gitignore  CMakeLists.txt  Makefile  puzzle1.cpp  puzzle2.cpp  puzzle3.cpp  puzzle4.cpp
c++/accelerated_computer_science_coursera/01_OOP/cpp-inheritance/: CMakeLists.txt  Cube.cpp  Cube.h  Makefile  Shape.cpp  Shape.h
c++/accelerated_computer_science_coursera/01_OOP/cpp-memory/: .gitignore  CMakeLists.txt  Makefile  main.cpp  puzzle.cpp
c++/accelerated_computer_science_coursera/01_OOP/cpp-memory2/: CMakeLists.txt  Cube.cpp
c++/accelerated_computer_science_coursera/01_OOP/cpp-std/: .gitignore  CMakeLists.txt  Makefile
c++/accelerated_computer_science_coursera/01_OOP/cpp-templates/: CMakeLists.txt
c++/accelerated_computer_science_coursera/01_OOP/cpp-tower/: CMakeLists.txt  Game.h  Stack.h
c++/accelerated_computer_science_coursera/01_OOP/cpp-tower-solution/: CMakeLists.txt
c++/accelerated_computer_science_coursera/01_OOP/cpp-tower-solution2/: CMakeLists.txt  Makefile
c++/accelerated_computer_science_coursera/01_OOP/week_2_assignment/: .gitignore
c++/accelerated_computer_science_coursera/01_OOP/week_2_challenge/: .gitignore  CMakeLists.txt  Makefile  main.cpp
c++/accelerated_computer_science_coursera/01_OOP/week_4_challenge/: .gitignore  CMakeLists.txt  Makefile  main.cpp
c++/basic_cpp_template/src/: CMakeLists.txt
c++/cpp_tutorial/src/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Preprocessor_Guide.md  README.md  dynamicCode.cpp  dynamicCode.h  initLibs  mainApp.cpp  objectCode.cpp  objectCode.h  readme.txt  staticCode.cpp  staticCode.h
c++/cpp_tutorial/src/basic/: Makefile  README.md  mainApp.cpp  readme.txt
c++/cpp_tutorial/src/share/: example.txt
c++/threads/src/: CMakeLists.txt  Makefile  README.md  mainApp.cpp  producer_consumer.cpp
cmake/cmake_example_1/: CMakeLists.txt  Doxyfile  README.md
cmake/cmake_example_1/HelloLib/: CMakeLists.txt  hello.cpp  hello.h
cmake/cmake_example_1/TestBin/: CMakeLists.txt  test.cpp
cmake/cmake_example_2/src/: CMakeLists.txt  Doxyfile.in
cmake/cmake_example_2/src/app_1/: CMakeLists.txt  program1.cpp
cmake/cmake_example_2/src/app_2/: CMakeLists.txt  program2.cpp
cmake/cmake_example_2/src/doc/: CMakeLists.txt  Doxyfile.in
cmake/cmake_example_2/src/lib_1/: CMakeLists.txt  factorial.cpp  factorial.h
cmake/cmake_example_2/src/lib_2/: CMakeLists.txt  hello.cpp  hello.h
eigen/eigen_example_00/: CMakeLists.txt  eigen_examples.cpp  initLibs
fcl/fcl_example_00/: CMakeLists.txt  README.md  main.cpp
geom_loaders/: CMakeLists.txt  README.md  geom_loaders_examples.cpp
gtest/gtest_example_00/: CMakeLists.txt  README.md
halcon/hdevengine/cpp/: CMakeLists.txt  exec_program.cpp  start_H20.05.bat
opencv/c++/opencv_example_01/: CMakeLists.txt  README.md  faceDetection.cpp  videoStreaming.cpp
opencv/c++/opencv_example_02/: 01_mat.cpp  02_scan_images.cpp  03_mat_mask_operations.cpp  CMakeLists.txt  README.md  initLibs
opencv/c++/opencv_example_03/: CMakeLists.txt  README.md  gen_pattern.py
opencv/c++/opencv_example_03/data/: board_gen_commands.txt  camera.yml
opencv/c++/openvc_example_0/: CMakeLists.txt
opencv/tests/test_aruco/: CMakeLists.txt  README.md  simple_detect_markers_image.cpp  simple_detect_markers_videostream.cpp
opencv/tests/test_aruco/data/: README.txt
opencv/tests/test_cctag/: CMakeLists.txt  initLibs  test_cctag.cpp
pcl/: .gitignore  CMakeLists.txt  README.md
pcl/data/: .gitignore
pcl/pcl_example_0/: CMakeLists.txt
pcl/pcl_example_00/: CMakeLists.txt  README.md  initLibs  pcd_write.cpp
pcl/pcl_example_01/: CMakeLists.txt  README.md  concatenate_clouds.cpp  new_point_type.cpp
pcl/pcl_example_02/: CMakeLists.txt  README.md  fpfhEstimation.cpp  moment_of_inertia.cpp  normalEstimation.cpp  normalEstimationImages.cpp  pfhEstimation.cpp
pcl/pcl_example_03/: CMakeLists.txt  README.md  cylinder_segmentation.cpp  extract_segmented_indices.cpp  passthrough.cpp  planar_segmentation.cpp  project_inliers.cpp  random_sample_consensus.cpp  remove_outliers.cpp  statistical_removal.cpp  voxel_grid.cpp
pcl/pcl_example_04/: CMakeLists.txt  README.md  alignment_prerejective.cpp  interactive_icp.cpp  iterative_closest_point.cpp  main.cpp  normal_distributions_transform.cpp
pcl/pcl_example_05/: CMakeLists.txt  README.md  concave_convex_hull_2d.cpp  greedy_projection.cpp  resampling.cpp
pcl/pcl_example_06/: CMakeLists.txt  README.md  cloud_viewer.cpp  pcl_visualizer_demo.cpp  simple_viewer.cpp
pcl/pcl_example_07/: CMakeLists.txt  README.md  narf_feature_extraction.cpp  narf_keypoint_extraction.cpp  range_image_border_extraction.cpp  range_image_creation.cpp  range_image_visualization.cpp
pcl/pcl_example_08/: README.md
poetry/rp-poetry/: pyproject.toml
poetry/rp-poetry/tests/: test_rp_poetry.py
python/pybind/pybind_example_00/: CMakeLists.txt  README.md  pymodule.cpp  test.py
python_docx/: .gitignore  Prompts.md  README.md  SPEC.md  pyproject.toml  python_docx_tests.ipynb
python_docx/data/: budget.json  receipt.json
python_docx/output/: basic_usage.docx  budget_BUD-2026-0001.docx  receipt_8b8ddf11.docx
python_docx/src/: documents.py  models.py
uv/example/: pyproject.toml
uv/example/tests/: test_rp_uv.py
(+451 files in other folders)
