add_subdirectory(pcl_example_00)
add_subdirectory(pcl_example_01)
add_subdirectory(pcl_example_02)
add_subdirectory(pcl_example_03)
add_subdirectory(pcl_example_04)
add_subdirectory(pcl_example_05)
add_subdirectory(pcl_example_06)
add_subdirectory(pcl_example_07)
add_subdirectory(pcl_example_08)
add_subdirectory(pcl_example_09)