[project]
name = "rp-uv"
version = "0.1.0"
description = ""
authors = [
    { name = "Mikel Sagardia", email = "msagardia@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4==4.10.0",
]

[dependency-groups]
dev = [
    "pytest>=5.2",
    "black>=23.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
