add_subdirectory(cpp-class)
add_subdirectory(cpp-std)
add_subdirectory(cpp-memory)
add_subdirectory(cpp-heapMemory)
add_subdirectory(cpp-heapPuzzles)
add_subdirectory(week_2_challenge)
#add_subdirectory(week_2_assignment)
add_subdirectory(cpp-ctor)
add_subdirectory(cpp-memory2)
add_subdirectory(cpp-dtor)
add_subdirectory(cpp-vector)
add_subdirectory(cpp-tower)
add_subdirectory(cpp-tower-solution)
add_subdirectory(cpp-tower-solution2)
